@@ -1,36 +1,0 @@
-plone.portlet.static Installation
-=================================
-
-If you are using zc.buildout:
-
- * Add ``plone.portlet.static`` to the list of eggs to install, e.g.:
- 
-    [buildout]
-    ...
-    eggs =
-        ...
-        plone.portlet.static
-        
-  * Tell the plone.recipe.zope2instance recipe to install a ZCML slug:
-  
-    [instance]
-    recipe = plone.recipe.zope2instance
-    ...
-    zcml =
-        plone.portlet.static
-
-If you are using traditional instances or a workingenv:
-
- * When you're reading this you have probably already run 
-   ``easy_install plone.portlet.static``. Find out how to install setuptools
-   (and EasyInstall) here:
-   http://peak.telecommunity.com/DevCenter/EasyInstall
-
- * Create a file called ``plone.portlet.static-configure.zcml`` in the
-   ``/path/to/instance/etc/package-includes`` directory.  The file
-   should only contain this::
-
-       <include package="plone.portlet.static" />
-
-Before you can use the portlet, you must install it from Plone's 
-``Add-on products`` control panel.
